--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid red;
     width: 100vw;
     height: 80px;
-    padding: 0px 60px;
+    padding: 0px 40px;
 }
 
 header .logo__links{
@@ -46,4 +45,47 @@ header .cuenta__snap{
     height: 34px;
     width: 84px;
     border-radius: 6px; 
+}
+
+main{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 80px;
+    margin-left: 140px;
+}
+
+main .segunda__section img{
+    width: 400px;
+    height: 460px;
+    margin-top: -60px;
+}
+
+.primera__section h1{
+    font-size: 60px;
+}
+
+.primera__section .descripcion__titulo{
+    margin-top: 20px;
+    max-width: 300px;
+}
+
+.primera__section .botom__learnMore{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 32px;
+    background: black;
+    border-radius: 8px;
+    color: white;
+}
+
+.primera__section .imagenes__cliente{
+    margin-top: 50px;
+}
+
+.imagenes__cliente img{
+    margin-right: 26px;
 }
