--- a/style.css
+++ b/style.css
@@ -27,8 +27,60 @@ header .logo__links{
 
 .links__pagina a{
     margin-left: 30px;
-    color: black;
+    color: rgba(0, 0, 0, 0.50);
     text-decoration: none;
+}
+
+.links__pagina a:hover{
+    color: black;
+}
+
+.links__pagina .conten__features{
+    position: absolute;
+    height: 110px;
+    width: 120px;
+    margin-top: 10px;
+    margin-left: -18px;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
+}
+
+.conten__features div{
+    display: flex;
+    align-items: center;
+    margin-top: 9px;
+    margin-left: 12px;
+    font-size: 12px;
+}
+
+.conten__features p{
+    margin-left: 16px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.icon-reminders{
+    margin-left: 2px;
+}
+
+.links__pagina .conten__company{
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    margin-top: 10px;
+    margin-left: 136px;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
+}
+
+.conten__company p{
+    font-size: 12px;
+    margin-top: 9px;
+    margin-left: 14px;
+    cursor: pointer;
+    user-select: none;
 }
 
 header .cuenta__snap{
@@ -39,14 +91,20 @@ header .cuenta__snap{
 .cuenta__snap .lbl__login{
     margin-right: 20px;
     cursor: pointer;
+    color: rgba(0, 0, 0, 0.50);
     user-select: none;
+}
+
+.cuenta__snap .lbl__login:hover{
+    color: black;
 }
 
 .cuenta__snap div{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.40);
+    color: rgba(0, 0, 0, 0.50);
     height: 32px;
     width: 92px;
     border-radius: 8px; 
@@ -54,18 +112,23 @@ header .cuenta__snap{
     user-select: none;
 }
 
+.cuenta__snap div:hover{
+    color: black;
+    border: 1px solid black;
+}
+
 main{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin-top: 80px;
+    margin-top: 100px;
     margin-left: 140px;
 }
 
 main .segunda__section img{
-    width: 400px;
+    width: 380px;
     height: 460px;
-    margin-top: -60px;
+    margin-top: -70px;
 }
 
 .primera__section h1{
@@ -92,6 +155,13 @@ main .segunda__section img{
     color: white;
     cursor: pointer;
     user-select: none;
+}
+
+.primera__section .botom__learnMore:hover{
+    background: white;
+    border: 1px solid black;
+    color: black;
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
 }
 
 .primera__section .imagenes__cliente{
