--- a/style.css
+++ b/style.css
@@ -1,41 +1,42 @@
 @import url('https://fonts.googleapis.com/css2? family= Epilogue:wght@500;700 & display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Epilogue', sans-serif;
 }
 
-header{
+header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100vw;
     height: 80px;
     padding: 0px 40px;
+    border: 1px solid red;
 }
 
-header .logo__links{
+header .logo__links {
     display: flex;
     align-items: center;
 }
 
-.logo__links article{
+.logo__links article {
     margin-left: 40px;
 }
 
-.links__pagina a{
+.links__pagina a {
     margin-left: 30px;
     color: rgba(0, 0, 0, 0.50);
     text-decoration: none;
 }
 
-.links__pagina a:hover{
+.links__pagina a:hover {
     color: black;
 }
 
-.links__pagina .conten__features{
+.links__pagina .conten__features {
     position: absolute;
     height: 110px;
     width: 120px;
@@ -44,9 +45,10 @@ header .logo__links{
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.30);
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
+    display: none;
 }
 
-.conten__features div{
+.conten__features div {
     display: flex;
     align-items: center;
     margin-top: 9px;
@@ -54,17 +56,17 @@ header .logo__links{
     font-size: 12px;
 }
 
-.conten__features p{
+.conten__features p {
     margin-left: 16px;
     cursor: pointer;
     user-select: none;
 }
 
-.icon-reminders{
+.icon-reminders {
     margin-left: 2px;
 }
 
-.links__pagina .conten__company{
+.links__pagina .conten__company {
     position: absolute;
     height: 80px;
     width: 80px;
@@ -73,9 +75,10 @@ header .logo__links{
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.30);
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
+    display: none;
 }
 
-.conten__company p{
+.conten__company p {
     font-size: 12px;
     margin-top: 9px;
     margin-left: 14px;
@@ -83,23 +86,23 @@ header .logo__links{
     user-select: none;
 }
 
-header .cuenta__snap{
+header .cuenta__snap {
     display: flex;
     align-items: center;
 }
 
-.cuenta__snap .lbl__login{
+.cuenta__snap .lbl__login {
     margin-right: 20px;
     cursor: pointer;
     color: rgba(0, 0, 0, 0.50);
     user-select: none;
 }
 
-.cuenta__snap .lbl__login:hover{
+.cuenta__snap .lbl__login:hover {
     color: black;
 }
 
-.cuenta__snap div{
+.cuenta__snap div {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,42 +110,51 @@ header .cuenta__snap{
     color: rgba(0, 0, 0, 0.50);
     height: 32px;
     width: 92px;
-    border-radius: 8px; 
+    border-radius: 8px;
     cursor: pointer;
     user-select: none;
 }
 
-.cuenta__snap div:hover{
+.cuenta__snap div:hover {
     color: black;
     border: 1px solid black;
 }
 
-main{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin-top: 100px;
-    margin-left: 140px;
+header figure{
+    display: none;
 }
 
-main .segunda__section img{
-    width: 380px;
-    height: 460px;
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    margin-top: 100px;
+    margin-left: 100px;
+    padding-right: 20px;
+}
+
+main .segunda__section{
+    background-image: url('./images/image-hero-desktop.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 360px;
+    height: 480px;
     margin-top: -70px;
 }
 
-.primera__section h1{
+.primera__section h1 {
     font-size: 64px;
+    max-width: 390px;
 }
 
-.primera__section .descripcion__titulo{
+.primera__section .descripcion__titulo {
     margin-top: 30px;
     max-width: 360px;
     color: rgba(0, 0, 0, 0.40);
     font-weight: bold;
 }
 
-.primera__section .botom__learnMore{
+.primera__section .botom__learnMore {
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -150,25 +162,120 @@ main .segunda__section img{
     width: 100px;
     height: 32px;
     background: black;
-    border-radius: 8px;
+    border-radius: 14px;
     font-size: 13px;
+    font-weight: bold;
     color: white;
     cursor: pointer;
     user-select: none;
 }
 
-.primera__section .botom__learnMore:hover{
+.primera__section .botom__learnMore:hover {
     background: white;
     border: 1px solid black;
     color: black;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.20);
 }
 
-.primera__section .imagenes__cliente{
+.primera__section .imagenes__cliente {
     margin-top: 50px;
 }
 
-.imagenes__cliente img{
+.imagenes__cliente img {
     margin-right: 26px;
     user-select: none;
+}
+
+@media screen and (max-width: 965px) {
+    .primera__section h1 {
+        font-size: 54px;
+        max-width: 330px;
+    }
+
+    .primera__section .descripcion__titulo {
+        margin-top: 20px;
+        font-size: 14px;
+    }
+
+    .primera__section .botom__learnMore {
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 804px) {
+    .primera__section .imagenes__cliente {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    header .links__pagina,
+    header .cuenta__snap{
+        display: none;
+    }
+
+    header figure{
+        display: block;
+    }
+
+    main {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 10px;
+        margin-top: 0px;
+        margin-left: 0px;
+        padding-right: 0px;
+        place-items: center;
+    }
+
+    main section{
+        width: 500px;
+        height: 400px;
+    }
+
+    .segunda__section:nth-child(2) {
+        grid-row: 1;
+        /* Cambiar el segundo elemento a la primera fila */
+    }
+
+    main .segunda__section{
+        background-image: url('./images/image-hero-mobile.png');
+        width: 480px;
+        height: 400px;
+        margin-top: 0px;
+    }
+
+    main .primera__section{
+        display: grid;
+        place-items: center;
+        width: 480px;
+        height: 400px;
+    }
+
+    .primera__section h1 {
+        max-width: 420px;
+        font-size: 46px;
+        margin-top: -30px;
+    }
+    
+    .primera__section .descripcion__titulo {
+        margin-top: -50px;
+        font-size: 18px;
+    }
+    
+    .primera__section .botom__learnMore {
+        margin-top: -50px;
+        width: 110px;
+        height: 40px;
+        font-size: 13px;
+    }
+
+    .primera__section .imagenes__cliente {
+        margin-top: -50px;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+    }
 }
