implementacion de JavaScript y modificaciones

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header {
     width: 100vw;
     height: 80px;
     padding: 0px 40px;
-    border: 1px solid red;
 }
 
 header .logo__links {
@@ -30,6 +29,7 @@ header .logo__links {
     margin-left: 30px;
     color: rgba(0, 0, 0, 0.50);
     text-decoration: none;
+    cursor: pointer;
 }
 
 .links__pagina a:hover {
@@ -121,6 +121,106 @@ header .cuenta__snap {
 }
 
 header figure{
+    display: none;
+    cursor: pointer;
+}
+
+.menu__movil{
+    background: white;
+    height: 100vh;
+    width: 240px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    display: none;
+}
+
+.menu__movil #icono__closeMenu{
+    position: absolute;
+    cursor: pointer;
+    user-select: none;
+    right: 26px;
+    top: 20px;
+}
+
+.menu__movil ul{
+   margin-top: 70px;
+   margin-left: 30px;
+}
+
+.menu__movil ul li{
+    margin-bottom: 20px;
+}
+
+#conten__feactures__movil{
+    padding-bottom: 20px;
+}
+
+#conten__feactures__movil div{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-top: 14px;
+}
+
+#conten__feactures__movil p{
+    margin-left: 10px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.conten__company__movil{
+    padding-bottom: 20px;
+    margin-left: 20px;
+    display: none;
+}
+
+.conten__company__movil p{
+    margin-top: 14px;
+    cursor: pointer;
+    user-select: none;
+}
+
+#conten__feactures__movil{
+    display:  none;
+}
+
+.quitar__estiloLista{
+    list-style: none;
+    cursor: pointer;
+    user-select: none;
+}
+
+.seccion__movil{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.seccion__movil div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    height: 34px;
+    width: 200px;
+    border-radius: 12px;
+}
+
+.seccion__movil{
+    cursor: pointer;
+    user-select: none;
+}
+
+#fondo__negro{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.80);
+    height: 200vh;
+    width: 100vw;
+    cursor: pointer;
     display: none;
 }
 
@@ -277,5 +377,11 @@ main .segunda__section{
         margin-top: -50px;
         grid-template-columns: repeat(4, 1fr);
         gap: 10px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    header{
+        width: 486px;
     }
 }
